# yumail

./: .gitignore  ARCHITECTURE.md  README.md  ROADMAP.md  TODO.md  eslint.config.js  package.json  pnpm-lock.yaml  prd.md  tsconfig.base.json  tsconfig.json
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/services/: development-secure-storage.ts  legacy-browser-storage-cleanup.ts  local-mail-metadata-repository.ts  mail-services.ts
scripts/: check-boundaries.mjs  run-tests.mjs
