[package]
name = "yumail-desktop"
version = "0.0.0"
description = "YuMail desktop shell"
authors = ["YuMail"]
edition = "2021"

[lib]
name = "yumail_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tauri = { version = "2.11.2", features = [] }
